--- a/style.css
+++ b/style.css
@@ -1,1 +1,85 @@
 @import './reset.css';
+@import 'https://fonts.googleapis.com/css?family=Varela+Round&display=swap';
+
+body{
+  font-family: 'Varela Round', sans-serif;
+}
+body::-webkit-scrollbar{
+  display: none;
+}
+
+.header {
+  position: relative;
+  width: 100vw;
+  height: 50vw;
+  color: white;
+  background-image: url('./resource/main.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  text-transform: uppercase;
+  font-size: 2vw;
+}
+.main-nav {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 7vw;
+  line-height: 7vw;
+  padding: 1vw;
+}
+.main-nav__list{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  align-items: center;
+  height: 100%;
+  margin: 0 2vw;
+}
+.main-nav__item{
+  float:left;
+  height: 100%;
+  margin: 0 3vw;
+  cursor: pointer;
+}
+.main-nav__item--logo {
+  height: 75%;
+  width: auto;
+  margin: 0 5vw;
+  content: url('./resource/camera.svg');
+}
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.title__main{
+  font-size: 4vw;
+}
+.title__content{
+  text-transform: lowercase;
+  margin: 1vw 0;
+}
+.title__btn{
+  all: unset;
+  width: 15vw;
+  height: 5vw;
+  border-radius: 0.5vw;
+  background-color: #16a085;
+  font-size: 1.5vw;
+  margin: 1vw 0;
+  cursor: pointer;
+}
+.icon-nav{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.icon-nav__item{
+  float: left;
+  margin: 1vw;
+  cursor: pointer;
+}
