--- a/style.css
+++ b/style.css
@@ -234,3 +234,82 @@ body::-webkit-scrollbar{
   width: auto;
   margin: 0.5vw;
 }
+
+.subscribe-part{
+  position: relative;
+  background-image: url('./resource/main.jpg');
+  background-size: 100% auto;
+  height: 50vw;
+}
+.subscribe-part__box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.subscribe-part__title{
+  color: white;
+  font-size: 2vw;
+  margin-bottom: 1vw;
+  text-transform: uppercase;
+}
+.subscribe-part__email{
+  all: unset;
+  background-color: white;
+  height: 3vw;
+  width: 20vw;
+  border-radius: 0.5vw;
+}
+.subscribe-part__email::placeholder{
+  text-align: left;
+  font-size: 1vw;
+  padding: 1vw;
+}
+.subscribe-part__btn{
+  all:unset;
+  background-color: #16a085;
+  height: 3vw;
+  width: 3vw;
+  margin-left: -1vw;
+  border-radius: 0 0.5vw 0.5vw 0;
+}
+
+.download-part{
+  position: relative;
+  background-color: #f5f6f7;
+  height: 25vw;
+  text-align: center;
+  text-transform: uppercase;
+}
+.download-part__box{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.download-part__title{
+  font-size: 2vw;
+}
+.download-part__content{
+  font-size: 1.5vw;
+  margin: 2vw 0;
+}
+.download-part__btn{
+  all: unset;
+  width: 20vw;
+  height: 4vw;
+  line-height: 4vw;
+  background-color: #1abc9c;
+  color: white;
+  text-align: left;
+  padding-left: 1vw;
+  border-radius: 0.5vw;
+}
+.download-part__icon{
+  background-color: #16a085;
+  width: 4vw;
+  height: 4vw;
+  float: right;
+  border-radius: 0 0.5vw 0.5vw 0;
+}
