--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 @import './reset.css';
 @import 'https://fonts.googleapis.com/css?family=Varela+Round&display=swap';
 
-@media (min-width: 1024px){
-  html{
+@media (min-width: 1024px) {
+  html {
     font-size: 10.24px;
   }
 }
-@media (min-width: 767px) and (max-width: 1024px){
-  html{
+@media (min-width: 767px) and (max-width: 1024px) {
+  html {
     font-size: 1vw;
   }
 }
-@media (max-width: 767px){
-  html{
+@media (max-width: 767px) {
+  html {
     font-size: 7.67px;
   }
 }
 
-body{
+body {
   font-family: 'Varela Round', sans-serif;
 }
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -30,10 +30,9 @@ body::-webkit-scrollbar{
   height: 49vw;
   color: white;
   background-image: url('./resource/main.jpg');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+  background-size: cover;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 .main-nav {
   position: absolute;
@@ -44,7 +43,7 @@ body::-webkit-scrollbar{
   line-height: 7vw;
   padding: 1vw;
 }
-.main-nav__list{
+.main-nav__list {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
@@ -52,14 +51,14 @@ body::-webkit-scrollbar{
   height: 100%;
   margin: 0 2vw;
 }
-.main-nav__item{
-  float:left;
+.main-nav__item {
+  float: left;
   height: 100%;
   margin: 0 3vw;
   cursor: pointer;
 }
 .main-nav__item--logo {
-  height: 75%;
+  height: 6rem;
   width: auto;
   margin: 0 5vw;
   content: url('./resource/camera.svg');
@@ -70,68 +69,68 @@ body::-webkit-scrollbar{
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  font-size: 1.5rem;
 }
-.title__main{
-  font-size: 4rem;
+.title__main {
+  font-size: 3.5rem;
 }
-.title__content{
+.title__content {
   text-transform: lowercase;
   margin: 1vw 0;
 }
-.title__btn{
+.title__btn {
   all: unset;
-  width: 15vw;
-  height: 4vw;
-  border-radius: 0.5vw;
+  width: 15rem;
+  height: 4rem;
+  border-radius: 0.5rem;
   background-color: #16a085;
-  font-size: 1.5rem;
   margin: 1vw 0;
   cursor: pointer;
 }
-.icon-nav{
+.icon-nav {
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
 }
-.icon-nav__item{
+.icon-nav__item {
   float: left;
   margin: 1vw;
   cursor: pointer;
 }
-.icon-nav__icon{
+.icon-nav__icon {
   width: 2rem;
   height: 2rem;
 }
 
-.intro-part{
+.intro-part {
   position: relative;
   background-color: #f5f6f7;
   height: 30vw;
 }
-.intro-part__box{
+.intro-part__box {
   position: absolute;
   top: 50%;
   left: 10%;
-  width: 30vw;
+  width: 24vw;
   transform: translateY(-50%);
 }
-.intro-part__title{
+.intro-part__title {
   font-size: 1.5rem;
   text-transform: uppercase;
   color: #30aa92;
   font-weight: bold;
 }
-.intro-part__content{
+.intro-part__content {
   font-size: 1rem;
   line-height: 1.5vw;
   margin: 2vw 0;
 }
-.intro-part__btn{
+.intro-part__btn {
   all: unset;
-  width: 15vw;
-  height: 4vw;
-  border-radius: 0.5vw;
+  width: 15rem;
+  height: 4rem;
+  border-radius: 0.5rem;
   background-color: #16a085;
   font-size: 1rem;
   cursor: pointer;
@@ -139,53 +138,51 @@ body::-webkit-scrollbar{
   color: white;
   text-transform: uppercase;
 }
-.intro-part__img{
+.intro-part__img {
   position: absolute;
   right: 10%;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 20vw;
+  bottom: 0;
+  height: 25vw;
   width: auto;
-  content: url('https://placehold.it/350X200');
+  content: url('./resource/intro.png');
 }
 
-.design-part{
+.design-part {
   position: relative;
   background-color: white;
   height: 30vw;
 }
-.design-part__img{
+.design-part__img {
   position: absolute;
   left: 10%;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 20vw;
+  bottom: 0;
+  height: 25vw;
   width: auto;
-  content: url('https://placehold.it/350X200');
+  content: url('./resource/design.PNG');
 }
-.design-part__box{
+.design-part__box {
   position: absolute;
   top: 50%;
   right: 10%;
-  width: 30vw;
+  width: 24vw;
   transform: translateY(-50%);
 }
-.design-part__title{
+.design-part__title {
   font-size: 1.5rem;
   text-transform: uppercase;
   color: #30aa92;
   font-weight: bold;
 }
-.design-part__content{
+.design-part__content {
   font-size: 1rem;
   line-height: 1.5vw;
   margin: 2vw 0;
 }
-.design-part__btn{
+.design-part__btn {
   all: unset;
-  width: 15vw;
-  height: 4vw;
-  border-radius: 0.5vw;
+  width: 15rem;
+  height: 4rem;
+  border-radius: 0.5rem;
   background-color: #16a085;
   font-size: 1rem;
   cursor: pointer;
@@ -194,22 +191,22 @@ body::-webkit-scrollbar{
   text-transform: uppercase;
   margin-bottom: 2vw;
 }
-.design-part__present{
+.design-part__present {
   font-size: 1rem;
 }
-.design-part__control{
-  all:unset;
-  margin-right:0.5vw;
+.design-part__control {
+  all: unset;
+  margin-right: 0.5vw;
   font-weight: bold;
   cursor: pointer;
 }
 
-.community-part{
+.community-part {
   position: relative;
   background-color: #f5f6f7;
   height: 30vw;
 }
-.community-part__box{
+.community-part__box {
   position: absolute;
   top: 50%;
   left: 10%;
@@ -217,156 +214,159 @@ body::-webkit-scrollbar{
   transform: translateY(-50%);
   text-align: center;
 }
-.community-part__logo{
+.community-part__logo {
   content: url('./resource/camera.svg');
   width: 5vw;
   height: 5vw;
 }
-.community-part__title{
+.community-part__title {
   font-size: 1.5rem;
   text-transform: uppercase;
   color: black;
   font-weight: bold;
   margin: 2vw 0;
 }
-.community-part__content{
-  font-size: 1vw;
+.community-part__content {
+  font-size: 1rem;
   line-height: 1.5vw;
 }
-.community-part__photo-box{
+.community-part__photo-box {
   position: absolute;
   right: 10%;
   top: 50%;
   transform: translateY(-50%);
 }
-.community-part__control-box{
+.community-part__control-box {
   text-align: right;
 }
-.community-part__control{
-  all:unset;
-  margin-right:0.5vw;
+.community-part__control {
+  all: unset;
+  margin-right: 0.5vw;
   font-weight: bold;
   cursor: pointer;
 }
-.community-part__image{
-  content: url('https://placehold.it/250X150');
+.community-part__image {
   height: 15vw;
   width: auto;
   margin: 0.5vw;
+  cursor: pointer;
 }
 
-.subscribe-part{
+.subscribe-part {
   position: relative;
-  background-image: url('./resource/main.jpg');
-  background-size: 100% auto;
+  background-image: url('./resource/subscribe.jpg');
+  background-size: cover;
   height: 49vw;
 }
-.subscribe-part__box{
+.subscribe-part__box {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
-.subscribe-part__title{
+.subscribe-part__title {
   color: white;
   font-size: 2rem;
   margin-bottom: 1vw;
   text-transform: uppercase;
 }
-.subscribe-part__form{
+.subscribe-part__form {
   position: relative;
-  width: 20vw;
+  width: 20rem;
   margin: 0 auto;
 }
-.subscribe-part__email{
+.subscribe-part__email {
   all: unset;
   text-align: left;
   background-color: white;
-  padding-left: 1vw;
-  height: 3vw;
-  width: 19vw;
-  border-radius: 0.5vw;
+  padding-left: 1rem;
+  height: 3rem;
+  width: 19rem;
+  border-radius: 0.5rem;
   font-size: 1rem;
 }
-.subscribe-part__btn{
-  position:absolute;
+.subscribe-part__btn {
+  position: absolute;
   right: 0;
   top: 0;
   background-color: #16a085;
-  height: 1vw;
-  width: 1vw;
-  padding: 1vw;
-  margin-left: -1vw;
-  border-radius: 0 0.5vw 0.5vw 0;
+  height: 1rem;
+  width: 1rem;
+  padding: 1rem;
+  margin-left: -1rem;
+  border-radius: 0 0.5rem 0.5rem 0;
   cursor: pointer;
 }
 
-.download-part{
+.download-part {
   position: relative;
   background-color: #f5f6f7;
   height: 30vw;
   text-align: center;
   text-transform: uppercase;
 }
-.download-part__box{
+.download-part__box {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.download-part__title{
+.download-part__title {
   font-size: 2rem;
 }
-.download-part__content{
-  font-size: 1.5rem;
-  margin: 2vw 0;
+.download-part__content {
+  font-size: 1.2rem;
+  margin-top: 1vw;
+  margin-bottom: 3vw;
 }
-.download-part__btn{
+.download-part__btn {
   all: unset;
-  width: 20vw;
-  height: 4vw;
-  line-height: 4vw;
+  width: 20rem;
+  height: 4rem;
+  line-height: 4rem;
   background-color: #1abc9c;
   color: white;
   text-align: left;
-  padding-left: 1vw;
-  border-radius: 0.5vw;
+  padding-left: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
-.download-part__icon{
+.download-part__icon {
   background-color: #16a085;
-  width: 2vw;
-  height: 2vw;
-  padding: 1vw;
+  width: 2rem;
+  height: 2rem;
+  padding: 1rem;
   float: right;
-  border-radius: 0 0.5vw 0.5vw 0;
+  border-radius: 0 0.5rem 0.5rem 0;
 }
 
-.footer{
+.footer {
   position: relative;
   height: 10vw;
+  font-size: 1rem;
 }
-.info{
+.info {
   position: absolute;
   top: 50%;
   left: 10%;
   transform: translateY(-50%);
 }
-.info__item{
+.info__item {
   display: inline-block;
   cursor: pointer;
   padding: 0 1vw;
   border-right: 1px solid gray;
   text-transform: uppercase;
 }
-.info__item:nth-last-of-type(1){
+.info__item:nth-last-of-type(1) {
   border-right: 0px solid gray;
 }
-.info__copyright{
+.info__copyright {
   padding: 0 1vw;
   margin-top: 1vw;
 }
-.footer__logo{
+.footer__logo {
   position: absolute;
   top: 50%;
   right: 10%;
